--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h3><a href="#">About me</a></h3>
 									<p>I am a final year student pursuing Engineering in Computer Sciences.<br />
 									I am a Data Enthusiast who love to visualize, transform and analyse data.<br />
-									My hobbie is reading books and listening songs.</p>
+									My hobbies are reading books and listening songs.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/Finalskill.jpg" alt="" /></a>
 								<ul class="actions special">
