--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>MADHAV KHURANA</h1>
-						<p>BUSINESS ANALYST</p>
+						<p>DATA ANALYST</p>
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
@@ -35,7 +35,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="Projects.html">Projects</a></li>
-							<li><a href="Blogs.html">BArticles</a></li>
+							<li><a href="Blogs.html">Articles</a></li>
 							<li><a href="Contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
@@ -60,7 +60,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/Finalskill.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://drive.google.com/file/d/1GFNe5rlQmj7c0Xt4q8txm6Rh5giREG8W/view?usp=sharing" target="_blank" class="button fit">VIEW RESUME</a></li>
+									<li><a href="https://drive.google.com/file/d/1qapA9RTHQq65eBx36YvASBaUnVWauGe9/view?usp=sharing" target="_blank" class="button fit">VIEW RESUME</a></li>
 								</ul>
 							</article>
 							<style>
